src/widgets/kernel/qwidget.cpp
@@ -5858,7 +5858,7 @@ QRectF QWidgetEffectSourcePrivate::boundingRect(Qt::CoordinateSystem system) con
 
 void QWidgetEffectSourcePrivate::draw(QPainter *painter)
 {
-    if (!context || context->painter != painter) {
+    if (!context || context->painter != painter || !context->sharedPainter) {
         m_widget->render(painter);
         return;
     }
